syntax = "proto3";
package proto.src.grpc.pb;

message FileRequest {
    bytes buffer = 1;
}


message FileResponse {
    int32 length = 1;
}

service File {
    rpc UploadFile (stream FileRequest) returns (FileResponse) {
    }
}